Initial Advance Questionnaire Excel report

--- a/eudevfin/cdf-wrapper/pom.xml
+++ b/eudevfin/cdf-wrapper/pom.xml
@@ -58,7 +58,12 @@
 			<artifactId>common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		            
+
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.6.2</version>
+		</dependency>
  	</dependencies>
  	
     <build>
