--- a/eudevfin/dim/src/main/webapp/WEB-INF/web.xml
+++ b/eudevfin/dim/src/main/webapp/WEB-INF/web.xml
@@ -83,6 +83,7 @@
             /WEB-INF/*/auth*.jar!/*/authContext.xml
             /WEB-INF/*/common*.jar!/*/commonContext.xml
             /WEB-INF/*/common-auth*.jar!/*/commonAuthContext.xml
+			classpath*:**/*Context.xml  
             /WEB-INF/*/META-INF/*Context.xml
             /WEB-INF/*/financial*.jar!/*/financialContext.xml
             /WEB-INF/*/common-financial*.jar!/*/commonFinancialContext.xml
