--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -11,16 +11,19 @@
     <url>http://www.springframework.org</url>
     <properties>
         <maven.test.failure.ignore>true</maven.test.failure.ignore>
-        <spring.framework.version>3.2.5.RELEASE</spring.framework.version>
+        <spring.framework.version>3.2.6.RELEASE</spring.framework.version>
         <spring.integration.version>2.2.6.RELEASE</spring.integration.version>
-        <spring.datajpa.version>1.4.2.RELEASE</spring.datajpa.version>
-        <jetty.version>9.0.6.v20130930</jetty.version>
-        <wicket.version>6.10.0</wicket.version>
+        <spring.datajpa.version>1.4.3.RELEASE</spring.datajpa.version>
+        <jetty.version>9.1.0.v20131115</jetty.version>
+        <wicket.version>6.12.0</wicket.version>
         <hibernate.core.version>4.2.8.Final</hibernate.core.version>
         <spring.security.version>3.1.4.RELEASE</spring.security.version>
         <servlet.api.version>3.1.0</servlet.api.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <wicket.bootstrap>0.8.5</wicket.bootstrap>
+        <derby.version>10.10.1.1</derby.version>
+        <wicket.select2.version>2.2.2</wicket.select2.version>
+        <liquibase.version>3.0.8</liquibase.version>
     </properties>
 
     <dependencies>
@@ -49,20 +52,20 @@
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
-            <version>10.10.1.1</version>
+            <version>${derby.version}</version>
         </dependency>
         
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derbynet</artifactId>
-            <version>10.10.1.1</version>
+            <version>${derby.version}</version>
         </dependency>
                       
         
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derbyclient</artifactId>
-            <version>10.10.1.1</version>
+            <version>${derby.version}</version>
         </dependency>
 
         <dependency>
@@ -95,7 +98,7 @@
         <dependency>
             <groupId>com.vaynberg.wicket.select2</groupId>
             <artifactId>wicket-select2</artifactId>
-            <version>2.2.2</version>
+            <version>${wicket.select2.version}</version>
         </dependency>
 
         <dependency>
@@ -147,7 +150,7 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>3.0.7</version>
+            <version>${liquibase.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.integration</groupId>
