--- a/eudevfin/dim/pom.xml
+++ b/eudevfin/dim/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>common-ui</artifactId>
             <version>${project.version}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>import-metadata</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.devgateway.eudevfin</groupId>
