added nullablewrapper and some refactoring of users/groups page

--- a/eudevfin/common-auth/pom.xml
+++ b/eudevfin/common-auth/pom.xml
@@ -15,6 +15,15 @@
             <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        
+        
+        
+       	<dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>common-financial</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+  
   
   </dependencies>
 </project>
