--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -23,6 +23,7 @@
         <wicket.bootstrap>0.8.5</wicket.bootstrap>
         <derby.version>10.10.1.1</derby.version>
         <wicket.select2.version>2.2.2</wicket.select2.version>
+        <ehcache.version>2.4.7</ehcache.version>
         <liquibase.version>3.0.8</liquibase.version>
     </properties>
 
@@ -73,6 +74,13 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.core.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-ehcache</artifactId>
+            <version>${hibernate.core.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-envers</artifactId>
@@ -136,6 +144,12 @@
             <artifactId>spring-security-web</artifactId>
             <version>${spring.security.version}</version>
         </dependency>
+        <dependency>
+        	<groupId>org.apache.tomcat</groupId>
+        	<artifactId>tomcat-jdbc</artifactId>
+        	<version>7.0.47</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
@@ -432,6 +446,11 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-jdbc</artifactId>
                 <version>${spring.framework.version}</version>
+            </dependency>
+            <dependency>
+            	<groupId>net.sf.ehcache</groupId>
+            	<artifactId>ehcache-core</artifactId>
+            	<version>${ehcache.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
