--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -172,6 +172,12 @@
             <version>${spring.integration.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-jmx</artifactId>
+            <version>${spring.integration.version}</version>
+        </dependency>
+        
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
             <version>${spring.framework.version}</version>
