--- a/eudevfin/cdf-wrapper/pom.xml
+++ b/eudevfin/cdf-wrapper/pom.xml
@@ -10,62 +10,62 @@
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.devgateway.eudevfin</groupId>
-        <artifactId>integration</artifactId>
-        <version>0.0.1.CI-SNAPSHOT</version>
-    </parent>
-    <artifactId>cdf-wrapper</artifactId>
-    <packaging>war</packaging>
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.devgateway.eudevfin</groupId>
+		<artifactId>integration</artifactId>
+		<version>0.0.1.CI-SNAPSHOT</version>
+	</parent>
+	<artifactId>cdf-wrapper</artifactId>
+	<packaging>war</packaging>
 
 
- 	<name>EU-DEVFIN CDF Wrapper</name>
- 	
- 	<dependencies>
- 		<dependency>
+	<name>EU-DEVFIN CDF Wrapper</name>
+
+	<dependencies>
+		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
 			<version>5.5.0</version>
 		</dependency>
-		
+
 		<dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-            <version>3.9</version>
-        </dependency>
-        
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.9</version>
+		</dependency>
+
 		<dependency>
-            <groupId>com.lowagie</groupId>
-            <artifactId>itext</artifactId>
-            <version>2.1.7</version>
-        </dependency>
-        
-        <dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.1.7</version>
+		</dependency>
+
+		<dependency>
 			<groupId>pentaho</groupId>
 			<artifactId>mondrian</artifactId>
 			<version>3.5.0</version>
 		</dependency>
-		
+
 		<dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.2.4</version>
-        </dependency>
-        
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.4</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.devgateway.eudevfin</groupId>
 			<artifactId>common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
-		   
+
+
 		<dependency>
 			<groupId>org.devgateway.eudevfin</groupId>
 			<artifactId>common-ui</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.devgateway.eudevfin</groupId>
 			<artifactId>common-auth</artifactId>
@@ -77,21 +77,20 @@
 			<artifactId>velocity</artifactId>
 			<version>1.6.2</version>
 		</dependency>
- 	</dependencies>
- 	
-    <build>
-        <resources>
-            <resource>
-                <filtering>false</filtering>
-                <directory>src/main/resources</directory>
-            </resource>
-        </resources>
-        <plugins>
-        
-        	<!-- Use JsHint and UglifyJs http://code.google.com/p/wro4j/wiki/Features 
-        	http://web-resource-optimization.blogspot.fi/2011/03/build-time-javascript-code-analysis.html
-        	-->
-		<!-- 
+	</dependencies>
+
+	<build>
+		<resources>
+			<resource>
+				<filtering>false</filtering>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+		<plugins>
+			<!-- Use JsHint and UglifyJs http://code.google.com/p/wro4j/wiki/Features
+			http://web-resource-optimization.blogspot.fi/2011/03/build-time-javascript-code-analysis.html
+			-->
+			<!--
 			<plugin>
 				<groupId>ro.isdc.wro4j</groupId>
 				<artifactId>wro4j-maven-plugin</artifactId>
@@ -108,28 +107,80 @@
 					<targetGroups>all</targetGroups>
 					<minimize>true</minimize>
 					<destinationFolder>${basedir}/src/main/webapp/wro/</destinationFolder>
-					<wroFile>${basedir}/src/main/webapp/WEB-INF/wro.xml</wroFile>					
+					<wroFile>${basedir}/src/main/webapp/WEB-INF/wro.xml</wroFile>
 					<ignoreMissingResources>false</ignoreMissingResources>
 				</configuration>
 			</plugin>
-		
-		 -->               
-        	<plugin>
-					
-        		<!-- Run javascript qunit tests https://github.com/cjdev/qunit-mojo  -->
-         		<groupId>com.cj.qunit.mojo</groupId>
-                <artifactId>qunit-maven-plugin</artifactId>
-                <version>2.0.7</version>
-                <executions>
-                    <execution>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                    </execution>
-                </executions>
+		    -->
+			<plugin>
+				<!-- Run javascript qunit tests https://github.com/cjdev/qunit-mojo  -->
+				<groupId>com.cj.qunit.mojo</groupId>
+				<artifactId>qunit-maven-plugin</artifactId>
+				<version>2.0.7</version>
+				<executions>
+					<execution>
+						<phase>test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
-        </plugins>
-        
-    </build>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jasperreports-maven-plugin</artifactId>
+				<version>1.0-beta-2</version>
+
+				<configuration>
+					<sourceDirectory>src/main/resources/org/devgateway/eudevfin/reports/dac1</sourceDirectory>
+					<sourceFileExt>.jrxml</sourceFileExt>
+					<!--<outputDirectory>${project.build.directory}/classes/org/devgateway/eudevfin/reports/dac1</outputDirectory>-->
+					<outputDirectory>src/main/resources/org/devgateway/eudevfin/reports/dac1</outputDirectory>
+					<outputFileExt>.jasper</outputFileExt>
+					<!-- Java compiler -->
+					<compiler>net.sf.jasperreports.engine.design.JRJdtCompiler</compiler>
+					<!-- Groovy compiler -->
+					<!--<compiler>net.sf.jasperreports.compilers.JRGroovyCompiler</compiler>-->
+					<xmlValidation>true</xmlValidation>
+				</configuration>
+
+				<executions>
+					<execution>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>compile-reports</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>net.sf.jasperreports</groupId>
+						<artifactId>jasperreports</artifactId>
+						<version>5.5.0</version>
+					</dependency>
+					<dependency>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+						<version>1.2.17</version>
+					</dependency>
+					<dependency>
+						<groupId>javax.servlet</groupId>
+						<artifactId>javax.servlet-api</artifactId>
+						<version>${servlet.api.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>xml-apis</groupId>
+						<artifactId>xml-apis</artifactId>
+						<version>1.4.01</version>
+					</dependency>
+					<dependency>
+						<groupId>com.lowagie</groupId>
+						<artifactId>itext</artifactId>
+						<version>2.1.7</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+		</plugins>
+	</build>
 </project>
