--- a/eudevfin/cdf-wrapper/pom.xml
+++ b/eudevfin/cdf-wrapper/pom.xml
@@ -136,7 +136,10 @@
 					<sourceDirectory>src/main/resources/org/devgateway/eudevfin/reports/dac1</sourceDirectory>
 					<sourceFileExt>.jrxml</sourceFileExt>
 					<!--<outputDirectory>${project.build.directory}/classes/org/devgateway/eudevfin/reports/dac1</outputDirectory>-->
+					<outputDirectory>${project.build.directory}/classes/org/devgateway/eudevfin/reports/dac1</outputDirectory>
+					<!-- 
 					<outputDirectory>src/main/resources/org/devgateway/eudevfin/reports/dac1</outputDirectory>
+					 -->
 					<outputFileExt>.jasper</outputFileExt>
 					<!-- Java compiler -->
 					<compiler>net.sf.jasperreports.engine.design.JRJdtCompiler</compiler>
@@ -147,7 +150,7 @@
 
 				<executions>
 					<execution>
-						<phase>process-resources</phase>
+						<phase>generate-resources</phase>
 						<goals>
 							<goal>compile-reports</goal>
 						</goals>
@@ -182,5 +185,36 @@
 				</dependencies>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.codehaus.mojo</groupId>
+										<artifactId>jasperreports-maven-plugin</artifactId>
+										<versionRange>[1.0-beta-2,)</versionRange>
+										<goals>
+											<goal>compile-reports</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+									 <execute >
+            							 <runOnIncremental>true</runOnIncremental>            					
+           							</execute >
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 </project>
