deactivating cache for mondrian

--- a/eudevfin/cda-wrapper/src/main/resources/mondrian.properties
+++ b/eudevfin/cda-wrapper/src/main/resources/mondrian.properties
@@ -24,7 +24,7 @@ mondrian.query.limit=50
 mondrian.rolap.LargeDimensionThreshold=100
 
 # Boolean property that controls whether a RolapStar's aggregate data cache is cleared after each query.
-mondrian.rolap.star.disableCaching=false
+mondrian.rolap.star.disableCaching=true
 
 # Boolean property which controls SQL pretty-print mode.
 mondrian.rolap.generate.formatted.sql=true
@@ -33,7 +33,7 @@ mondrian.rolap.generate.formatted.sql=true
 mondrian.olap.case.sensitive=true
 
 # Boolean property which controls whether to use a cache for frequently evaluated expressions.
-mondrian.expCache.enable=true
+mondrian.expCache.enable=false
 
 # if enabled some NON EMPTY CrossJoin will be computed in SQL
 mondrian.native.crossjoin.enable=true
