Added more i18n strings for AQ report

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/i18n.properties
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/i18n.properties
@@ -33,8 +33,11 @@ aq.memo.recipientBreakdown=1. Recipient breakdown of bilateral ODA, net:
 aq.memo.ldcs=a. to LDCs
 aq.memo.africa=b. to Africa
 aq.memo.subsaharanAfrica=c. to Sub-Saharan Africa, total
+aq.memo.subsaharanAfrica.subtitle=of which: Debt relief grants
 aq.memo.afghanistan=d. to Afghanistan, total
+aq.memo.afghanistan.subtitle=of which: Reconstruction for Afghanistan
 aq.memo.iraq=e. to Iraq
+aq.memo.iraq.subtitle=of which: Reconstruction for Iraq
 aq.memo.sectoralBreakdown=2. Sectoral breakdown of bilateral ODA, net:
 aq.memo.humanitarianAid=a. Humanitarian aid
 aq.memo.shortTermReconstruction=of which: Short-term reconstruction
