Management Console Module - MCM as a WAR overlay

--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -477,7 +477,8 @@
 		<module>saikuui</module>
 		<module>common-ui</module>
     	<module>import-metadata</module>
-  </modules>
+    	<module>mcm</module>
+    </modules>
     <inceptionYear>2013</inceptionYear>
     <organization>
         <name>Development Gateway</name>
