--- a/eudevfin/dim/pom.xml
+++ b/eudevfin/dim/pom.xml
@@ -75,7 +75,13 @@
             <type>war</type>
         </dependency>
 
-         
+        <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>mcm</artifactId>
+            <version>${project.version}</version>
+            <type>war</type>
+        </dependency>
+    
         <dependency>
             <groupId>org.devgateway.eudevfin</groupId>
             <artifactId>cda-wrapper</artifactId>
