edit non flow - some refactoring plus s-i channels

--- a/eudevfin/common/src/main/resources/common.properties
+++ b/eudevfin/common/src/main/resources/common.properties
@@ -1,2 +1,4 @@
 si.defaultReplyTimeout=600
-sel.defaultSelectorPageSize=20
+select2.pageSize=20
+eudevfin.reportingYear.start=2009
+eudevfin.reportingYear.end=2014
