stub exchange rates added for dashboard/reports to work

--- a/eudevfin/dim/pom.xml
+++ b/eudevfin/dim/pom.xml
@@ -58,6 +58,12 @@
 
         <dependency>
             <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>exchange</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
             <artifactId>common-ui</artifactId>
             <version>${project.version}</version>
         </dependency>
