--- a/eudevfin/dim/src/main/webapp/WEB-INF/web.xml
+++ b/eudevfin/dim/src/main/webapp/WEB-INF/web.xml
@@ -80,14 +80,7 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			/WEB-INF/*/auth*.jar!/*/authContext.xml
-			/WEB-INF/*/common*.jar!/*/commonContext.xml
-			/WEB-INF/*/common-auth*.jar!/*/commonAuthContext.xml
-			classpath*:**/*Context.xml
-			/WEB-INF/*/financial*.jar!/*/financialContext.xml
-			/WEB-INF/*/common-financial*.jar!/*/commonFinancialContext.xml
-			/WEB-INF/*/import-metadata*.jar!/*/importMetadataContext.xml
-
+			classpath*:META-INF/*Context.xml
 		</param-value>
 	</context-param>
 </web-app>
