--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.devgateway.eudevfin</groupId>
     <artifactId>integration</artifactId>
-    <version>0.0.1.CI-SNAPSHOT</version>
+    <version>0.9.0</version>
     <packaging>pom</packaging>
     <name>EU-DEVFIN Package</name>
     <url>http://www.springframework.org</url>
@@ -26,6 +26,13 @@
         <ehcache.version>2.4.7</ehcache.version>
         <liquibase.version>3.0.8</liquibase.version>
     </properties>
+
+	<scm>
+		<url>ssh://mpostelnicu@git.developmentgateway.org:20006/home/mpostelnicu/projects/eudevfin.git</url>
+		<developerConnection>scm:git:ssh://mpostelnicu@git.developmentgateway.org:20006/home/mpostelnicu/projects/eudevfin.git</developerConnection>
+		<connection>scm:git:ssh://mpostelnicu@git.developmentgateway.org:20006/home/mpostelnicu/projects/eudevfin.git</connection>
+		<tag>HEAD</tag>
+	</scm>
 
     <dependencies>
 
