--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.devgateway.eudevfin</groupId>
     <artifactId>integration</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>EU-DEVFIN Package</name>
     <url>http://www.springframework.org</url>
