--- a/eudevfin/saikuui/pom.xml
+++ b/eudevfin/saikuui/pom.xml
@@ -2,7 +2,7 @@
     <parent>
         <groupId>org.devgateway.eudevfin</groupId>
         <artifactId>integration</artifactId>
-        <version>0.0.1.CI-SNAPSHOT</version>
+        <version>0.9.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>saikuui</artifactId>
