year on top of the AQ report is changed automatically. (ODAEU-44)

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/i18n.properties
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/i18n.properties
@@ -1,6 +1,6 @@
 dac1.title=TABLE DAC 1 DISBURSEMENTS AND COMMITMENTS <br/> OF OFFICIAL AND PRIVATE FLOWS
 aq.title=ADVANCE QUESTIONNAIRE ON MAIN ODA AGGREGATES
-aq.subtitle=(2012 Edition)
+aq.subtitle=Edition
 aq.reportingCountry=Reporting Country:
 aq.exchangeRatesUsed=Exchange rates used
 aq.disbursements=DISBURSEMENTS
