--- a/eudevfin/import-metadata/pom.xml
+++ b/eudevfin/import-metadata/pom.xml
@@ -5,11 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.devgateway.eudevfin</groupId>
-		<artifactId>integration</artifactId>
+		<artifactId>eudevfin</artifactId>
 		<version>0.9.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>import-metadata</artifactId>
-	<name>eudevfin importing of metadata</name>
+	<name>EU-DEVFIN Importing Of Metadata</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
