--- a/eudevfin/common-ui/pom.xml
+++ b/eudevfin/common-ui/pom.xml
@@ -2,10 +2,12 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.devgateway.eudevfin</groupId>
-    <artifactId>integration</artifactId>
+    <artifactId>eudevfin</artifactId>
     <version>0.9.0-SNAPSHOT</version>
   </parent>
   <artifactId>common-ui</artifactId>
+  
+    <name>EU-DEVFIN Common UI</name>
   
   <dependencies>
   	<dependency>
