--- a/eudevfin/dim/pom.xml
+++ b/eudevfin/dim/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.devgateway.eudevfin</groupId>
-        <artifactId>integration</artifactId>
+        <artifactId>eudevfin</artifactId>
         <version>0.9.0-SNAPSHOT</version>
     </parent>
     <artifactId>dim</artifactId>
