fixed typo in property name

--- a/eudevfin/common/src/main/resources/common.properties
+++ b/eudevfin/common/src/main/resources/common.properties
@@ -2,4 +2,4 @@ si.defaultReplyTimeout=600
 select2.pageSize=20
 eudevfin.reportingYear.start=2009
 eudevfin.reportingYear.end=2014
-eudevfin.version.number=${project.version}
+eudevfin.version=${project.version}
