--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -209,7 +209,7 @@
 		<dependency>
 			<groupId>org.joda</groupId>
 			<artifactId>joda-money</artifactId>
-			<version>0.9</version>
+			<version>0.9-exchangerate</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jadira.usertype</groupId>
