--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -9,11 +9,11 @@
     <url>http://www.springframework.org</url>
     <properties>
         <maven.test.failure.ignore>true</maven.test.failure.ignore>
-        <spring.framework.version>3.2.6.RELEASE</spring.framework.version>
+        <spring.framework.version>3.2.7.RELEASE</spring.framework.version>
         <spring.integration.version>2.2.6.RELEASE</spring.integration.version>
         <spring.datajpa.version>1.4.3.RELEASE</spring.datajpa.version>
         <jetty.version>9.1.0.v20131115</jetty.version>
-        <wicket.version>6.12.0</wicket.version>
+        <wicket.version>6.13.0</wicket.version>
         <hibernate.core.version>4.2.8.Final</hibernate.core.version>
         <spring.security.version>3.1.4.RELEASE</spring.security.version>
         <servlet.api.version>3.1.0</servlet.api.version>
@@ -130,6 +130,11 @@
         <dependency>
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket-core</artifactId>
+            <version>${wicket.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.wicket</groupId>
+            <artifactId>wicket-devutils</artifactId>
             <version>${wicket.version}</version>
         </dependency>
         <dependency>
