exchange rates for all OECD countries plus proper precision/indexes on exchange rates table ODAEU-79

--- a/eudevfin/dim/src/main/webapp/WEB-INF/web.xml
+++ b/eudevfin/dim/src/main/webapp/WEB-INF/web.xml
@@ -83,4 +83,10 @@
 			classpath*:META-INF/*Context.xml
 		</param-value>
 	</context-param>
+
+	<session-config>
+		<session-timeout>1</session-timeout>
+	</session-config>
+	
+	
 </web-app>
