--- a/eudevfin/cdf-wrapper/src/main/webapp/WEB-INF/web.xml
+++ b/eudevfin/cdf-wrapper/src/main/webapp/WEB-INF/web.xml
@@ -8,8 +8,16 @@
 	version="2.5">
 
 	<display-name>eudevfin-cdf-wrapper</display-name>
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
-	<listener>
+    <listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	<context-param>
