--- a/eudevfin/spreadsheet-exporter/pom.xml
+++ b/eudevfin/spreadsheet-exporter/pom.xml
@@ -3,10 +3,10 @@
   <parent>
     <groupId>org.devgateway.eudevfin</groupId>
     <artifactId>eudevfin</artifactId>
-    <version>0.9.2-SNAPSHOT</version>
+    <version>0.9.4-SNAPSHOT</version>
   </parent>
   <artifactId>spreadsheet-exporter</artifactId>
-  <name>EU-DEVFIN Transaction Exporter</name>
+  <name>EU-DEVFIN Spreadsheet Exporter</name>
   	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
