--- a/eudevfin/common/src/main/resources/common.properties
+++ b/eudevfin/common/src/main/resources/common.properties
@@ -3,3 +3,4 @@ select2.pageSize=20
 eudevfin.reportingYear.start=2009
 eudevfin.reportingYear.end=2014
 eudevfin.version=${project.version}
+eudevfin.database.name=eudevfin
