--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -163,6 +163,13 @@
         	<version>7.0.47</version>
         </dependency>
 
+	<dependency>
+		<groupId>org.zeroturnaround</groupId>
+		<artifactId>zt-zip</artifactId>
+		<version>1.7</version>
+		<type>jar</type>
+	</dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
