--- a/eudevfin/auth/pom.xml
+++ b/eudevfin/auth/pom.xml
@@ -26,6 +26,13 @@
       <version>${project.version}</version>
     </dependency>    
     
+     <dependency>
+      <groupId>org.devgateway.eudevfin</groupId>
+      <artifactId>import-metadata</artifactId>
+      <version>${project.version}</version>
+    </dependency>    
+    
+    
   </dependencies>
   <name>EU-DEVFIN Authentication</name>
 </project>
