--- a/eudevfin/cda-wrapper/pom.xml
+++ b/eudevfin/cda-wrapper/pom.xml
@@ -56,13 +56,12 @@
 			<version>${project.version}</version>
 		</dependency>
 
-
      	<dependency>
             <groupId>org.devgateway.eudevfin</groupId>
             <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+
 		<dependency>
 			<groupId>org.devgateway.eudevfin</groupId>
 			<artifactId>financial</artifactId>
@@ -72,6 +71,24 @@
         <dependency>
             <groupId>org.devgateway.eudevfin</groupId>
             <artifactId>import-metadata</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>common-financial</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>exchange</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>common-exchange</artifactId>
             <version>${project.version}</version>
         </dependency>
 
