ODAEU-128 Added new and complete AQ report test

--- a/eudevfin/cdf-wrapper/pom.xml
+++ b/eudevfin/cdf-wrapper/pom.xml
@@ -43,6 +43,12 @@
 
 		<dependency>
 			<groupId>org.devgateway.eudevfin</groupId>
+			<artifactId>cda-wrapper</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.devgateway.eudevfin</groupId>
 			<artifactId>auth</artifactId>
 			<version>${project.version}</version>
 		</dependency>
