--- a/eudevfin/cdf-wrapper/pom.xml
+++ b/eudevfin/cdf-wrapper/pom.xml
@@ -54,6 +54,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>cda-wrapper</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.googlecode.wicked-charts</groupId>
             <artifactId>wicked-charts-wicket6</artifactId>
             <version>1.5.0</version>
