--- a/eudevfin/common-financial/pom.xml
+++ b/eudevfin/common-financial/pom.xml
@@ -27,6 +27,14 @@
 			<artifactId>common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		
+		<dependency>
+			<groupId>org.devgateway.eudevfin</groupId>
+			<artifactId>common-auth</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
 
 	</dependencies>
 </project>
