--- a/eudevfin/financial/pom.xml
+++ b/eudevfin/financial/pom.xml
@@ -30,6 +30,12 @@
 		</dependency>
 		
 
+		<dependency>
+			<groupId>org.devgateway.eudevfin</groupId>
+			<artifactId>common-auth</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
 		
 	</dependencies>
 
